--- a/app/views/customer/services/new.html.erb
+++ b/app/views/customer/services/new.html.erb
@@ -4,3 +4,27 @@
   </div>
   <div class="col-sm-8"></div>
 </div>
+
+<script type="text/javascript" charset="utf-8">
+
+    $(document).ready(function(){
+        $('#service_subcategory_id').prop('disabled', 'disabled');
+
+        $("#service_category_id").change(function() {
+            var category_name =  $("#service_category_id").find(":selected").text();
+            var category_val = this.value;
+            $.get("/admin/subcategories/get_subcategories_for_category/"+ category_val +".json?subcategory_type="+category_name+"", function(data, status){
+                var appendString = '<option value="">Select Subcategory</option>';
+                for(var i=0; i < data.length;i++){
+                    appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+                }
+                $('#service_subcategory_id').html(appendString);
+            });
+            len = $("#service_category_id option:selected").length;
+            if (len > 0 ) {
+                $('#service_subcategory_id').prop('disabled', false);
+            }
+        });
+    });
+
+</script>
