--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -9,8 +9,8 @@
     <%= f.input :area_in_meters %>
     <%= f.input :amenities_available %>
     <%= f.input :service_description %>
-    <%= f.input :state_id %>
-    <%= f.input :city_id %>
+    <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state' %>
+    <%= f.input :city_id, collection: [], prompt: 'Select city' %>
     <%= f.input :location %>
     <%= f.input :price_type, collection: ['Per hour','Per day', 'Per week', 'Per month'], prompt: 'Choose price' %>
     <%= f.input :youtube_link %>
