--- a/app/views/customer/services/new.html.erb
+++ b/app/views/customer/services/new.html.erb
@@ -25,6 +25,17 @@
                 $('#service_subcategory_id').prop('disabled', false);
             }
         });
+
+        $("#service_state_id").change(function() {
+            var state_id = this.value;
+            $.get("/cities/collection_by_state/"+state_id+".json", function(data, status){
+                var appendString = '<option value="">Select city</option>';
+                for(var i=0; i < data.length;i++){
+                    appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+                }
+                $('#service_city_id').html(appendString);
+            });
+        });
     });
 
 </script>
