--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -1,14 +1,20 @@
 <%= simple_form_for [:customer, @service] do |f| %>
-    <%= f.input :category_id, collection: membership_and_space, prompt: 'Select category' %>
+    <%= f.input :category_id, collection: service_category_collertion, prompt: 'Select category' %>
     <%= f.input :subcategory_id, collection: [], prompt: 'Select subcategory' %>
-    <%= f.input :nature_of_service %>
-    <%= f.input :club_name %>
-    <%= f.input :membership_plan %>
-    <%= f.input :start_at %>
-    <%= f.input :end_at %>
-    <%= f.input :area_in_meters %>
-    <%= f.input :amenities_available %>
-    <%= f.input :service_description %>
+    <div class="for_other">
+      <%= f.input :nature_of_service %>
+    </div>
+    <div class="membership_blog">
+      <%= f.input :club_name %>
+      <%= f.input :membership_plan %>
+      <%= f.input :start_at %>
+      <%= f.input :end_at %>
+    </div>
+    <div class="commercial_space_blog">
+      <%= f.input :area_in_meters %>
+      <%= f.input :amenities_available %>
+      <%= f.input :service_description %>
+    </div>
     <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state' %>
     <%= f.input :city_id, collection: [], prompt: 'Select city' %>
     <%= f.input :location %>
