--- a/app/views/customer/services/new.html.erb
+++ b/app/views/customer/services/new.html.erb
@@ -9,6 +9,21 @@
 
     $(document).ready(function(){
         $('#service_subcategory_id').prop('disabled', 'disabled');
+        $('.membership_blog').hide();
+        $('.commercial_space_blog').hide();
+        $('.for_other').hide();
+
+        $("#service_subcategory_id").change(function() {
+            var subcategory_name =  $(this).find(":selected").text();
+            if (subcategory_name == 'Others'){
+                $('.for_other').show();
+            }
+            else{
+                $('.for_other').hide();
+            }
+
+        });
+
 
         $("#service_category_id").change(function() {
             var category_name =  $("#service_category_id").find(":selected").text();
