--- a/app/views/welcome/categories.html.erb
+++ b/app/views/welcome/categories.html.erb
@@ -189,350 +189,38 @@
     </div>
     <div class="col-md-9">
       <div class="row" data-gutter="15">
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels"></ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">Apple iPhone 5c - 16GB - GSM Factory Unlocked White Blue Green Pink Yellow</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$127</span>
+        <% @advertisements.each do |advertisement| %>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <div class="product ">
+                <ul class="product-labels"></ul>
+                <div class="product-img-wrap">
+                  <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
+                  <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
+                </div>
+                <a class="product-link" href="#"></a>
+                <div class="product-caption">
+                  <ul class="product-caption-rating">
+                    <li class="rated"><i class="fa fa-star"></i>
+                    </li>
+                    <li class="rated"><i class="fa fa-star"></i>
+                    </li>
+                    <li class="rated"><i class="fa fa-star"></i>
+                    </li>
+                    <li class="rated"><i class="fa fa-star"></i>
+                    </li>
+                    <li class="rated"><i class="fa fa-star"></i>
+                    </li>
+                  </ul>
+                  <h5 class="product-caption-title"><%= advertisement.title %></h5>
+                  <div class="product-caption-price"><span class="product-caption-price-new"><i class="fa fa-inr"></i><%= advertisement.per_hour_cost %></span>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels"></ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">Samsung Galaxy S6 Edge+ Factory Unlocked GSM 32GB</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$138</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels"></ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">Samsung Galaxy Note 4 IV 4G FACTORY UNLOCKED Black or White</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$87</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row" data-gutter="15">
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels"></ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">Google Nexus 6 XT1103 4G LTE - 32GB - Blue Factory Unlocked GSM</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$125</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels"></ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">Apple iPhone 4S 16GB Factory Unlocked Black and White Smartphone</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$71</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels"></ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">HTC One M8 32GB Factory Unlocked Smartphone  Gold / Silver Gray</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$94</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row" data-gutter="15">
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels">
-              <li>stuff pick</li>
-              <li>hot</li>
-            </ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">LG G3 VS985 - 32GB - Verizon Smartphone - Metallic Black or Silk White - Great</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$59</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels">
-              <li>-20%</li>
-              <li>hot</li>
-            </ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">LG G Flex D959 - 32GB - Titan Silver GSM Unlocked Android Smartphone (B)</h5>
-              <div class="product-caption-price"><span class="product-caption-price-old">$62</span><span class="product-caption-price-new">$50</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels"></ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">Motorola XT1096 Moto X 2nd Generation 16GB Verizon Wireless gsm unlocked</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$113</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row" data-gutter="15">
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels"></ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-                <li><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">Apple iPhone 5s 16GB Factory Unlocked Smartphone Space Gray / Silver / Gold</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$95</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels"></ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">Google Nexus 6 XT1103 4G LTE - 32GB - Blue Factory Unlocked GSM</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$65</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="product ">
-            <ul class="product-labels">
-              <li>stuff pick</li>
-            </ul>
-            <div class="product-img-wrap">
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-primary' %>
-              <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
-            </div>
-            <a class="product-link" href="#"></a>
-            <div class="product-caption">
-              <ul class="product-caption-rating">
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-                <li class="rated"><i class="fa fa-star"></i>
-                </li>
-              </ul>
-              <h5 class="product-caption-title">Samsung Galaxy S6 Edge+ Factory Unlocked GSM 32GB</h5>
-              <div class="product-caption-price"><span class="product-caption-price-new">$86</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <% end %>
       </div>
       <div class="row">
-        <div class="col-md-6">
-          <p class="category-pagination-sign">58 items found in Cell Phones. Showing 1 - 12</p>
-        </div>
-        <div class="col-md-6">
+        <div class="col-xs-12">
           <nav>
             <ul class="pagination category-pagination pull-right">
               <li class="active"><a href="#">1</a>
