create blog, contact us page put categories in header

--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -4,11 +4,11 @@
       <div class="row">
         <div class="col-sm-12">
           <ul class="nav navbar-nav navbar-right navbar-right-no-mar">
-            <li><a href="#">About Us</a>
+            <li><a href="/about_us">About Us</a>
             </li>
-            <li><a href="#">Blog</a>
+            <li><a href="/blog">Blog</a>
             </li>
-            <li><a href="#">Contact Us</a>
+            <li><a href="/contact_us">Contact Us</a>
             </li>
             <li><a href="#">FAQ</a>
             </li>
@@ -108,51 +108,38 @@
         <ul class="nav navbar-nav">
           <li class="dropdown"><a href="#"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
             <ul class="dropdown-menu dropdown-menu-category">
-              <li><a href="#"><i class="fa fa-home dropdown-menu-category-icon"></i>Home & Garden</a>
+              <li><a href="#"><i class="fa fa-home dropdown-menu-category-icon"></i>Home Appliances</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
                       <div class="row">
                         <div class="col-md-6">
-                          <h5 class="dropdown-menu-category-title">Home & Garden</h5>
                           <ul class="dropdown-menu-category-list">
-                            <li><a href="#">Home</a>
-                              <p>Hac primis inceptos diam volutpat</p>
+                            <li><a href="#">Air Conditioners</a>
                             </li>
-                            <li><a href="#">Kitchen</a>
-                              <p>Arcu fermentum integer penatibus laoreet</p>
+                            <li><a href="#">Fridge</a>
                             </li>
-                            <li><a href="#">Furniture & Decor</a>
-                              <p>Cras habitant litora auctor porta</p>
+                            <li><a href="#">Microwave Oven/Otg</a>
                             </li>
-                            <li><a href="#">Bedding & Bath</a>
-                              <p>Viverra volutpat platea fusce ridiculus</p>
+                            <li><a href="#">Induction Appliance</a>
                             </li>
-                            <li><a href="#">Appilances</a>
-                              <p>Fringilla mattis turpis phasellus blandit</p>
+                            <li><a href="#">Invertors</a>
                             </li>
-                            <li><a href="#">Patio, Lawn & Garden</a>
-                              <p>Erat quam dictum habitasse convallis</p>
+                            <li><a href="#">Water Purifier</a>
                             </li>
-                            <li><a href="#">Wedding Registry</a>
-                              <p>Posuere elit potenti tellus consequat</p>
+                            <li><a href="#">Water Coolers</a>
                             </li>
                           </ul>
                         </div>
                         <div class="col-md-6">
-                          <h5 class="dropdown-menu-category-title">Home Improvement</h5>
                           <ul class="dropdown-menu-category-list">
-                            <li><a href="#">Home Improvement</a>
-                              <p>Fusce est placerat sociosqu lacinia</p>
+                            <li><a href="#">Washing Machines</a>
                             </li>
-                            <li><a href="#">Lamps & Light Fixtures</a>
-                              <p>Non facilisi dolor viverra sociis</p>
+                            <li><a href="#">Vaccumm Cleaner</a>
                             </li>
-                            <li><a href="#">Kitchen & Bath Fixtures</a>
-                              <p>Ullamcorper arcu vitae molestie est</p>
+                            <li><a href="#">Air Purifiers</a>
                             </li>
-                            <li><a href="#">Home Automation</a>
-                              <p>Purus tellus scelerisque natoque consectetur</p>
+                            <li><a href="#">Others</a>
                             </li>
                           </ul>
                         </div>
@@ -163,57 +150,38 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-diamond dropdown-menu-category-icon"></i>Jewelry</a>
+              <li><a href="#"><i class="fa fa-diamond dropdown-menu-category-icon"></i>Home Furnishing</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
                       <div class="row">
                         <div class="col-md-6">
-                          <h5 class="dropdown-menu-category-title">Jewelry</h5>
                           <ul class="dropdown-menu-category-list">
-                            <li><a href="#">Necklances & Pendants</a>
-                              <p>Orci egestas morbi malesuada quam</p>
+                            <li><a href="#">Sofas</a>
                             </li>
-                            <li><a href="#">Bracelets</a>
-                              <p>Turpis ipsum quis diam lectus</p>
+                            <li><a href="#">Dining Tables</a>
                             </li>
-                            <li><a href="#">Rings</a>
-                              <p>Tincidunt duis iaculis ultrices dictumst</p>
+                            <li><a href="#">Center Table</a>
                             </li>
-                            <li><a href="#">Errings</a>
-                              <p>Proin fermentum ut aenean orci</p>
+                            <li><a href="#">Beds/Sofa-Sum-Beds</a>
                             </li>
-                            <li><a href="#">Wedding & Engagement</a>
-                              <p>Magna nec nunc sapien sodales</p>
+                            <li><a href="#">Chairs</a>
                             </li>
-                            <li><a href="#">Charms</a>
-                              <p>Leo praesent molestie sollicitudin odio</p>
+                            <li><a href="#">Wardrobes</a>
                             </li>
-                            <li><a href="#">Booches</a>
-                              <p>Mattis porta lorem proin praesent</p>
-                            </li>
-                            <li><a href="#">Men's Jewelry</a>
-                              <p>Nunc dis sodales natoque dictum</p>
+                            <li><a href="#">Almirahs</a>
                             </li>
                           </ul>
                         </div>
                         <div class="col-md-6">
-                          <h5 class="dropdown-menu-category-title">Jewelry Shops</h5>
                           <ul class="dropdown-menu-category-list">
-                            <li><a href="#">Contemporary & Designer</a>
-                              <p>Vivamus morbi ridiculus platea euismod</p>
+                            <li><a href="#">Computer Table</a>
                             </li>
-                            <li><a href="#">Juniors</a>
-                              <p>Vehicula mus a class nunc</p>
+                            <li><a href="#">Incliners/Rocking Chairs</a>
                             </li>
-                            <li><a href="#">Meternity</a>
-                              <p>Odio ligula tellus porta egestas</p>
+                            <li><a href="#">Outdoor Table Set</a>
                             </li>
-                            <li><a href="#">Pettite</a>
-                              <p>Turpis neque pulvinar ante platea</p>
-                            </li>
-                            <li><a href="#">Uniforms, Works & Safety</a>
-                              <p>Porta sollicitudin fermentum parturient dictumst</p>
+                            <li><a href="#">Others</a>
                             </li>
                           </ul>
                         </div>
