--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -61,9 +61,9 @@
       </div>
     </div>
     <ul class="main-footer-links-list">
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="/about_us">About Us</a></li>
+      <li><a href="/blog">Blog</a></li>
+      <li><a href="/contact_us">Contact Us</a></li>
       <li><a href="#">FAQ</a></li>
       <li><a href="#">Wishlist</a></li>
       <li><a href="#">Help</a></li>
