--- a/app/views/admin/advertisements/edit.html.erb
+++ b/app/views/admin/advertisements/edit.html.erb
@@ -13,7 +13,7 @@
         else{ 
             $('#advertisement_subcategory_id').prop('disable', true); 
             var category_val = $('#advertisement_category_id').val(); 
-            $.get("/admin/subcategories/get_subcategories_for_category/"+ category_val +".json", function(data, status){ 
+            $.get("/get_subcategories/"+ category_val +".json", function(data, status){ 
                 var appendString = '<option value="">Select Subcategory</option>'; 
                 for(var i=0; i < data.length;i++){ 
                     appendString +="<option value="+data[i].id+">" + data[i].name + "</option>"; 
@@ -23,7 +23,7 @@
         }  
         $("#advertisement_category_id").change(function() { 
             var category_val = this.value; 
-            $.get("/admin/subcategories/get_subcategories_for_category/"+ category_val +".json", function(data, status){ 
+            $.get("/get_subcategories/"+ category_val +".json", function(data, status){ 
                 var appendString = '<option value="">Select Subcategory</option>'; 
                 for(var i=0; i < data.length;i++){ 
                     appendString +="<option value="+data[i].id+">" + data[i].name + "</option>"; 
