--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -12,6 +12,7 @@
     <%= f.input :end_at %>
     <%= f.input :quantity %>
     <%= f.input :rent, collection: ['Per day', 'Per week', 'Per month'], prompt: 'choose rent' %>
+    <%= f.input :price_in_rupees %>
     <%= f.input :refundable_security %>
     <%= f.input :cost_of_replacement %>
     <%= f.input :youtube_link %>
