--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -19,6 +19,7 @@
     <%= f.input :city_id, collection: [], prompt: 'Select city' %>
     <%= f.input :location %>
     <%= f.input :price_type, collection: ['Per hour','Per day', 'Per week', 'Per month'], prompt: 'Choose price' %>
+    <%= f.input :price_in_rupees %>
     <%= f.input :youtube_link %>
     <%= f.input :other %>
     <%= f.submit 'Save', class: 'btn btn-primary' %>
