--- a/app/views/customer/products/index.html.erb
+++ b/app/views/customer/products/index.html.erb
@@ -26,6 +26,10 @@
             <td><%= product.start_at.strftime(time_format) %></td>
             <td><%= product.start_at.strftime(time_format) %></td>
             <td>
+
+              <%= link_to customer_product_path(product) do %>
+                  <i class="fa fa-eye"></i>
+              <% end %>
               <%= link_to edit_customer_product_path(product) do %>
                   <i class="fa fa-edit"></i>
               <% end %>
