--- a/app/views/customer/products/show.html.erb
+++ b/app/views/customer/products/show.html.erb
@@ -13,6 +13,7 @@
     <div class="col-sm-12"><strong>End at: </strong><%= @product.end_at.strftime(time_format) %></div>
     <div class="col-sm-12"><strong>Quantity: </strong><%= @product.quantity %></div>
     <div class="col-sm-12"><strong>Rent: </strong><%= @product.rent %></div>
+    <div class="col-sm-12"><strong>Price in rupees: </strong><%= @service.price_in_rupees %></div>
     <div class="col-sm-12"><strong>Refundable security: </strong><%= @product.refundable_security %></div>
     <div class="col-sm-12"><strong>Cost of replacement: </strong><%= @product.cost_of_replacement %></div>
     <div class="col-sm-12"><strong>Youtube link: </strong><%= @product.youtube_link %></div>
