--- a/app/views/customer/advertisements/index.html.erb
+++ b/app/views/customer/advertisements/index.html.erb
@@ -5,7 +5,7 @@
       <tr class="info">
         <th>Title</th>
         <th>Email</th>
-        <th>Contact</th>
+        <!--<th>Contact</th>-->
         <th>Category</th>
         <th>SubCategory</th>
         <th>Start At</th>
@@ -18,7 +18,7 @@
           <tr>
             <td><%= advertisement.title %></td>
             <td><%= advertisement.user.email if advertisement.user.present? %></td>
-            <td><%= advertisement.user.contact if advertisement.user.present? %></td>
+            <!--<td><%#= advertisement.user.contact if advertisement.user.present? %></td>-->
             <td><%= advertisement.subcategory.category.name if advertisement.subcategory.category.present? %></td>
             <td><%= advertisement.subcategory.name if advertisement.subcategory.present? %></td>
             <td><%= advertisement.start_at.strftime(time_format) %></td>
