--- a/app/views/customer/welcome/dashboard.html.erb
+++ b/app/views/customer/welcome/dashboard.html.erb
@@ -30,6 +30,15 @@
                     url: "<%= customer_advertisement_path(advertisement) %>"
                 },
                 <% end %>
+                <% @products.each do |product| %>
+                {
+                    title: "<%= product.name %>",
+                    start: "<%= product.start_at %>",
+                    end: "<%= product.end_at %>",
+                    description: "<%= product.description %>",
+                    url: "<%= customer_product_path(product) %>"
+                },
+                <% end %>
             ]
         });
 
