--- a/app/views/customer/products/show.html.erb
+++ b/app/views/customer/products/show.html.erb
@@ -3,7 +3,9 @@
     <div class="col-sm-12"><strong>Name: </strong><%= @product.name %></div>
     <div class="col-sm-12"><strong>Category: </strong><%= @product.subcategory.category.name %></div>
     <div class="col-sm-12"><strong>Subcategory: </strong><%= @product.subcategory.name %></div>
-    <div class="col-sm-12"><strong>Gender: </strong><%= @product.gender %></div>
+    <% if @product.name == 'Wedding Collection' %>
+        <div class="col-sm-12"><strong>Gender: </strong><%= @product.gender %></div>
+    <% end %>
     <div class="col-sm-12"><strong>Description: </strong><%= @product.description %></div>
     <div class="col-sm-12"><strong>Technical Specification: </strong><%= @product.technical_specification %></div>
     <div class="col-sm-12"><strong>State: </strong><%= @product.state.name %></div>
@@ -13,7 +15,7 @@
     <div class="col-sm-12"><strong>End at: </strong><%= @product.end_at.strftime(time_format) %></div>
     <div class="col-sm-12"><strong>Quantity: </strong><%= @product.quantity %></div>
     <div class="col-sm-12"><strong>Rent: </strong><%= @product.rent %></div>
-    <div class="col-sm-12"><strong>Price in rupees: </strong><%= @service.price_in_rupees %></div>
+    <div class="col-sm-12"><strong>Price in rupees: </strong><%= @product.price_in_rupees %></div>
     <div class="col-sm-12"><strong>Refundable security: </strong><%= @product.refundable_security %></div>
     <div class="col-sm-12"><strong>Cost of replacement: </strong><%= @product.cost_of_replacement %></div>
     <div class="col-sm-12"><strong>Youtube link: </strong><%= @product.youtube_link %></div>
