--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -26,7 +26,7 @@
             <td><%= service.subcategory.category.name %></td>
             <td><%= service.subcategory.name %></td>
             <td><%= service.start_at.strftime(time_format) %></td>
-            <td><%= service.start_at.strftime(time_format) %></td>
+            <td><%= service.end_at.strftime(time_format) %></td>
             <td>
               <%= link_to customer_service_path(service) do %>
                   <i class="fa fa-eye"></i>
