--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :description %>
     <%= f.input :technical_specification %>
     <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state' %>
-    <%= f.input :city_id, collection: [], prompt: 'Select city' %>
+    <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city' %>
     <%= f.input :location %>
     <%= f.input :start_at %>
     <%= f.input :end_at %>
