--- a/app/views/customer/products/edit.html.erb
+++ b/app/views/customer/products/edit.html.erb
@@ -4,3 +4,87 @@
   </div>
   <div class="col-sm-8"></div>
 </div>
+
+<script type="text/javascript" charset="utf-8">
+
+    $(document).ready(function(){
+        $('.product_gender').hide();
+        var selected_category_id = $('#product_category_id').val();
+        var selected_subcategory_id = $('#product_subcategory_id').val();
+        var selected_state_id = $('#product_state_id').val();
+        var selected_city_id = $('#product_city_id').val();
+
+        $.get("/cities/collection_by_state/"+selected_state_id+".json", function(data, status){
+            var appendString = '<option value="">Select city</option>';
+            for(var i=0; i < data.length;i++){
+                appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+            }
+            $('#product_city_id').html(appendString);
+            $('#product_city_id').val(selected_city_id);
+        });
+
+        $.get("/get_subcategories/"+ selected_category_id +".json?subcategory_type=Product", function(data, status){
+            var appendString = '';
+            for(var i=0; i < data.length;i++){
+                appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+            }
+            $('#product_subcategory_id').html(appendString);
+            $('#product_subcategory_id').val(selected_subcategory_id);
+        });
+
+        $("#product_state_id").change(function() {
+            var state_id = this.value;
+            $.get("/cities/collection_by_state/"+state_id+".json", function(data, status){
+                var appendString = '<option value="">Select city</option>';
+                for(var i=0; i < data.length;i++){
+                    appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+                }
+                $('#product_city_id').html(appendString);
+            });
+        });
+
+        $("#product_category_id").change(function() {
+            var category_name =  $("#product_category_id").find(":selected").text();
+            if (category_name == 'Wedding Collection'){
+                $('.product_gender').show();
+                $('#product_subcategory_id').prop('disabled', 'disabled');
+            }
+            else{
+                $('.product_gender').hide();
+                var category_val = this.value;
+                $.get("/get_subcategories/"+ category_val +".json?subcategory_type=Product", function(data, status){
+                    var appendString = '<option value="">Select Subcategory</option>';
+                    for(var i=0; i < data.length;i++){
+                        appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+                    }
+                    $('#product_subcategory_id').html(appendString);
+                });
+                len = $("#product_category_id option:selected").length
+                if (len > 0 ) {
+                    $('#product_subcategory_id').prop('disabled', false);
+                }
+            }
+        });
+
+        $("#product_gender").change(function() {
+            var gender = $("#product_gender").find(":selected").text();
+            var category_id = $("#product_category_id").val();
+
+            $.get("/get_subcategories/"+ category_id +".json?subcategory_type=Product&gender="+gender+"", function(data, status){
+                var appendString = '<option value="">Select Subcategory</option>';
+                for(var i=0; i < data.length;i++){
+                    appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+                }
+                $('#product_subcategory_id').html(appendString);
+            });
+
+            len = $("#product_category_id option:selected").length
+            if (len > 0 ) {
+                $('#product_subcategory_id').prop('disabled', false);
+            }
+
+        });
+
+    });
+
+</script>
