--- a/app/views/admin/advertisements/index.html.erb
+++ b/app/views/admin/advertisements/index.html.erb
@@ -8,8 +8,6 @@
   </div>
 </div>
 
-<%= will_paginate @advertisements %>
-
 <div class="row">
   <div class="col-sm-12">
     <table class="table table-striped">
@@ -18,6 +16,7 @@
         <th>Title</th>
         <th>Category</th>
         <th>Subcategory</th>
+        <th>Email</th>
         <th>Action</th>
       </tr>
       </thead>
@@ -27,6 +26,7 @@
             <td><%= advertisement.title %></td>
             <td><%= advertisement.subcategory.category.name %></td>
             <td><%= advertisement.subcategory.name %></td>
+            <td><%= advertisement.user.email %></td>
             <td>
               <% if advertisement.admin_verified? %>
                   <span class="text-success">Verified by admin</span>
