--- a/app/views/admin/cities/index.html.erb
+++ b/app/views/admin/cities/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <table class="table table_striped">
+    <table class="table table-striped">
       <tr class="info">
         <th>City</th>
         <th>State Id</th>
