--- a/app/views/admin/states/index.html.erb
+++ b/app/views/admin/states/index.html.erb
@@ -1,9 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <ul class="list-inline">
-      <li>
-        <%= link_to 'Add State', new_admin_state_path, class: 'btn btn-primary' %>
-      </li>
+      <li><%= link_to 'Add State', new_admin_state_path, class: 'btn btn-primary' %></li>
     </ul>
   </div>
 </div>
