work on profile page

--- a/app/views/welcome/categories.html.erb
+++ b/app/views/welcome/categories.html.erb
@@ -1,12 +1,43 @@
+<header class="page-header page-header-banner">
+  <div class="container">
+    <div class="page-header-banner-inner">
+      <h1 class="page-title">Running Shoes</h1>
+      <ol class="breadcrumb page-breadcrumb">
+        <li><a href="#">Home</a>
+        </li>
+        <li><a href="#">Clothes &amp; Shoes</a>
+        </li>
+        <li><a href="#">Woman</a>
+        </li>
+        <li class="active">Running Shoes</li>
+      </ol>
+      <ul class="category-selections clearfix">
+
+        <li><span class="category-selections-sign">Sort by :</span>
+          <select class="category-selections-select">
+            <option selected>Newest First</option>
+            <option>Best Sellers</option>
+            <option>Trending Now</option>
+            <option>Best Raited</option>
+            <option>Price : Lowest First</option>
+            <option>Price : Highest First</option>
+            <option>Title : A - Z</option>
+            <option>Title : Z - A</option>
+          </select>
+        </li>
+        <li><span class="category-selections-sign">Items :</span>
+          <select class="category-selections-select">
+            <option>9 / page</option>
+            <option selected>12 / page</option>
+            <option>18 / page</option>
+            <option>All</option>
+          </select>
+        </li>
+      </ul>
+    </div>
+  </div>
+</header>
 <div class="container">
-  <header class="page-header">
-    <h1 class="page-title">Cell Phones</h1>
-    <ol class="breadcrumb page-breadcrumb">
-      <li><a href="#">Home</a>
-      </li>
-      <li class="active">Cell Phones</li>
-    </ol>
-  </header>
   <div class="row">
     <div class="col-md-3">
       <aside class="category-filters">
