--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -7,4 +7,5 @@
   <li><%= link_to 'Advertisements', admin_advertisements_path %></li>
   <li><%= link_to 'Customers', admin_customers_path %></li>
   <!--<li><%#= link_to 'Products', admin_products_path %></li>-->
+  <li><%= link_to 'Pending Advertisements', pending_advertisements_admin_advertisements_path %></li>
 </ul>
