--- a/app/assets/stylesheets/customer.css
+++ b/app/assets/stylesheets/customer.css
@@ -1,4 +1,6 @@
 /*
+ *= require_tree
+ *= require_self
  *= require ./vendors/bootstrap
  *= require ./vendors/loading-bar
  *= require ./vendors/notify
