--- a/app/views/customer/welcome/dashboard.html.erb
+++ b/app/views/customer/welcome/dashboard.html.erb
@@ -3,7 +3,10 @@
 <style>
     #calendar {
         max-width: 900px;
-        margin: 0 auto;
+        margin: 20px auto;
+        background: #fff;
+        padding: 20px;
+        border-radius: 5px;
     }
 </style>
 
