--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -542,7 +542,14 @@
         </form>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-              <li><a href="Javascript:void(0)"><%= current_user.email %></a></li>
+              <li class="dropdown"><a href="Javascript:void(0)"><%= current_user.email %></a>
+                <ul class="dropdown-menu dropdown-menu-shipping-cart">
+                  <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
+                  <li><%= link_to 'Advertisements', customer_advertisements_path %></li>
+                  <li><%= link_to 'Products', customer_products_path %></li>
+                  <li><%= link_to 'Services', customer_services_path %></li>
+                </ul>
+              </li>
               <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
           <%- end %>
         </ul>
